css/recruiting-token.css
html, body {
  font-family: 'Roboto', 'Helvetica', sans-serif;
  margin: 0;
  padding: 0;
}
.mdl-demo .mdl-layout__header-row {
  padding-left: 40px;
}
.mdl-demo .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
  font-size: inherit;
}
.mdl-demo .mdl-layout__tab-bar-button {
  display: none;
}
.mdl-demo .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
  display: none;
}
.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
  overflow: visible;
}
.mdl-demo .mdl-layout__tab-bar-container {
  height: 64px;
}
.mdl-demo .mdl-layout__tab-bar {
  padding: 0;
  padding-left: 16px;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
}
.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab {
  height: 64px;
  line-height: 64px;
}
.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
  background-color: white;
  height: 4px;
}
.mdl-demo main > .mdl-layout__tab-panel {
  padding: 8px;
  padding-top: 48px;
}
.mdl-demo .mdl-card {
  height: auto;
  display: flex;
  flex-direction: column;
}
.mdl-demo .mdl-card > * {
  height: auto;
}
.mdl-demo .mdl-card .mdl-card__supporting-text {
  margin: 40px;
  flex-grow: 1;
  padding: 0;
  color: inherit;
  width: calc(100% - 80px);
}
.mdl-demo.mdl-demo .mdl-card__supporting-text h4 {
  margin-top: 0;
  margin-bottom: 20px;
}
.mdl-demo .mdl-card__actions {
  margin: 0;
  padding: 4px 40px;
  color: inherit;
}
.mdl-demo .mdl-card__actions a {
  color: #00BCD4;
  margin: 0;
}
.mdl-demo .mdl-card__actions a:hover,
.mdl-demo .mdl-card__actions a:active {
  color: inherit;
  background-color: transparent;
}
.mdl-demo .mdl-card__supporting-text + .mdl-card__actions {
  border-top: 1px solid rgba(0, 0, 0, 0.12);
}
.mdl-demo #add {
  position: absolute;
  right: 40px;
  top: 36px;
  z-index: 999;
}

.mdl-demo .mdl-layout__content section:not(:last-of-type) {
  position: relative;
  margin-bottom: 48px;
}
.mdl-demo section.section--center {
  max-width: 860px;
}
.mdl-demo #features section.section--center {
  max-width: 620px;
}
.mdl-demo section > header{
  display: flex;
  align-items: center;
  justify-content: center;
}
.mdl-demo section > .section__play-btn {
  min-height: 200px;
}
.mdl-demo section > header > .material-icons {
  font-size: 3rem;
}
.mdl-demo section > button {
  position: absolute;
  z-index: 99;
  top: 8px;
  right: 8px;
}
.mdl-demo section .section__circle {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-grow: 0;
  flex-shrink: 1;
}
.mdl-demo section .section__text {
  flex-grow: 1;
  flex-shrink: 0;
  padding-top: 8px;
}
.mdl-demo section .section__text h5 {
  font-size: inherit;
  margin: 0;
  margin-bottom: 0.5em;
}
.mdl-demo section .section__text a {
  text-decoration: none;
}
.mdl-demo section .section__circle-container > .section__circle-container__circle {
  width: 64px;
  height: 64px;
  border-radius: 32px;
  margin: 8px 0;
}
.mdl-demo section.section--footer .section__circle--big {
  width: 100px;
  height: 100px;
  border-radius: 50px;
  margin: 8px 32px;
}
.mdl-demo .is-small-screen section.section--footer .section__circle--big {
  width: 50px;
  height: 50px;
  border-radius: 25px;
  margin: 8px 16px;
}
.mdl-demo section.section--footer {
  padding: 64px 0;
  margin: 0 -8px -8px -8px;
}
.mdl-demo section.section--center .section__text:not(:last-child) {
  border-bottom: 1px solid rgba(0,0,0,.13);
}
.mdl-demo .mdl-card .mdl-card__supporting-text > h3:first-child {
  margin-bottom: 24px;
}
.mdl-demo .mdl-layout__tab-panel:not(#overview) {
  background-color: white;
}
.mdl-demo #features section {
  margin-bottom: 72px;
}
.mdl-demo #features h4, #features h5 {
  margin-bottom: 16px;
}
.mdl-demo .toc {
  border-left: 4px solid #C1EEF4;
  margin: 24px;
  padding: 0;
  padding-left: 8px;
  display: flex;
  flex-direction: column;
}
.mdl-demo .toc h4 {
  font-size: 0.9rem;
  margin-top: 0;
}
.mdl-demo .toc a {
  color: #4DD0E1;
  text-decoration: none;
  font-size: 16px;
  line-height: 28px;
  display: block;
}
.mdl-demo .mdl-menu__container {
  z-index: 99;
}
#interested-row {
  margin-bottom: 0px;
}
.interested-button{
  color: white;
  position: fixed;
  display: block;
  bottom: 0;
  z-index: 900;
  padding: 0px;
}
#interested-disabled-button {
  color: white;
  left: 0;
}
#interested-yes-button {
  background-color: #4CAF50;
  right: 0;
  margin-right: 50%;
}
#interested-maybe-button {
  background-color: #FFC107;
  right: 0;
  margin-right: 25%;
}
#interested-no-button {
  background-color: #D0021B;
  right: 0;
}
#yes-submit {
  background-color: #4CAF50;
}
#maybe-submit {
  background-color: #FFC107;
}
#no-submit {
  background-color: #D0021B;
}
.demo-layout-waterfall .mdl-layout__header-row .mdl-navigation__link:last-of-type  {
  padding-right: 0;
}
.long-title {
  padding-left: 25px;
}
.current-section {
  font-style: normal;
}
/* image stuph */
.demo-card-image.mdl-card {
  width: 256px;
  height: 256px;
}
.demo-card-image > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: rgba(0, 0, 0, 0.2);
}
.demo-card-image__filename {
  color: #fff;
  font-size: 14px;
  font-weight: 500;
}
neon-animated-pages {
  height: 100%;
}
.large {
  width: 100%
}
.back-button-lower {
  position: fixed;
  top: 90px;
  left: 30px;
  z-index: 900;
  background-color: white;
}
.back-button-lower-right {
  position: fixed;
  top: 90px;
  right: 30px;
  z-index: 900;
  background-color: white;
}

.back-button {
  position: fixed;
  top: 30px;
  left: 30px;
  z-index: 900;
  background-color: white;
}

#job-description-icon {
  background-color:#8E78FF;
}
.mdl-demo .mdl-card .mdl-card__supporting-icon {
  margin: 40px;
  flex-grow: 1;
  padding: 0;
  width: calc(100% - 80px);
  text-align: center;
}
i.huge-icon {
  font-size:200px;
}
i.big-icon {
  font-size:50px;
}
.job-description-option {
  background-color: white;
  padding: 0;
  margin: 0;
  border: 0;
  /*width: 19.4%;*/
  font-size: 12px;
}
#job-description-options {
  margin: 0px;
}
#location-frontpage {
  text-align:center;
  background: url('/images/MountainView.jpg') center / cover;
}
#images-frontpage {
  text-align:center;
  background: url('/images/bloom5.jpg') center / cover;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 48px;
}
#supporting-images, #supporting-videos, #supporting-location {
  margin-top: 267px;
  height: 50px;
  padding-top: 20px;
  padding-left: 30px;
  font-size: 40px;
  background: rgba(0, 0, 0, 0.2);
  text-align: left;
  vertical-align: middle;
  color: whitesmoke;
}
#videos-frontpage {
  text-align:center;
  background: url('https://i.ytimg.com/vi_webp/AY-Sxu8Itsw/mqdefault.webp') center / cover;
  margin-right: 0px;
  margin-left: 0px;
  margin-bottom: 48px;
}
.mdl-layout__header {
  background-image: linear-gradient(45deg, #E500E7, #00D7FF);
}
.social-section {
  background-image: linear-gradient(45deg, #E500E7, #00D7FF);
}
.frontpage-social-button {
  /*height: 100px;*/
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
  border-right: 1px;
  border-color: white;
}
.mdl-layout__header .mdl-layout__drawer-button {
  background: rgba(0, 0, 0, 0);
}
.mdl-layout-spacer {

}
.gt-city-spring-hi, .gt-city-spring-lo, .gt-city-spring-avg, .gt-city-summer-hi, .gt-city-summer-lo, .gt-city-summer-avg, .gt-city-fall-hi, .gt-city-fall-lo, .gt-city-fall-avg, .gt-city-winter-hi, .gt-city-winter-lo, .gt-city-winter-avg, .gt-info-company, .gt-info-jobtitle {
  font-style:normal;
}

